# SIDReasoner

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  calc.py  data_Qwen3.py  evaluate_Qwen3.py  evaluate_Qwen3_think.py  evaluate_Qwen3_think_batch.sh  merge.py  plot_metrics.py  pyproject.toml  sft_Qwen3.py  sft_Qwen3_preprocess.py  sft_Qwen3_train.py  sft_reasoning_activation.py  split.py
MiniOneRec/: install_env.sh  run_gru.sh  run_sasrec.sh
scripts/: RL_training_script.sh  create_direct_rl_data.py  create_reasoning_rl_data.py  evaluate_Qwen3.sh  evaluate_Qwen3_think.sh  install_vllm_sglang_mcore.sh  merge_fsdp_ckpt.sh  preprocess_sft.sh  preprocess_sft_Qwen3.5-0.8B_enrich.sh  setup_uv_env.sh  sft_Qwen3.5-0.8B_enrich.sh  sft_Qwen3_ablation.sh  sft_Qwen3_enrich.sh  sft_reasoning_activation.sh  snellius_env.sh  train_sft.sh
scripts/experiments/: prepare_direct_rl_data.sh  stage3_lora.sh  stage3_no_think.sh
verl/: protocol.py
verl/experimental/agent_loop/: agent_loop.py
verl/model_merger/: fsdp_model_merger.py  megatron_model_merger.py
verl/models/mcore/: config_converter.py  loader.py  saver.py
verl/models/transformers/: monkey_patch.py
verl/single_controller/base/: decorator.py
verl/single_controller/ray/: base.py
verl/tools/: crs_item_retrieve_tool.py  rec_tool copy.py  rec_tool.py  rec_tool_backup.py
verl/trainer/: fsdp_sft_trainer.py  main_ppo.py
verl/trainer/config/: ppo_megatron_trainer.yaml
verl/trainer/ppo/: ray_trainer copy.py  ray_trainer.py  ray_trainer_beam_ver.py  ray_trainer_extra_info_inject.py  reward.py
verl/utils/: megatron_utils.py  model.py  seqlen_balancing.py  torch_functional.py  ulysses.py
verl/utils/checkpoint/: fsdp_checkpoint_manager.py  megatron_checkpoint_manager.py
verl/utils/profiler/: config.py  profile.py
verl/utils/reward_score/: direct_recommendation_StepRule_Games.py  direct_recommendation_StepRule_Industrial.py  recommend.py  (+2 more)
verl/workers/: fsdp_workers.py  megatron_workers.py
(+28 files in other folders)
